--- a/l10n/cs.json
+++ b/l10n/cs.json
@@ -1,5 +1,5 @@
 { "translations": {
-    "Configurable Share Links" : "Konfigurovatelné Sdílené Odkazy",
+    "Configurable Share Links" : "Konfigurovatelné sdílené odkazy",
     "Invalid share type" : "Neplatný typ sdílení",
     "Public link sharing is disabled by the administrator" : "Tvorba veřejných odkazů je zakázána administrátorem",
     "Please specify a file or folder path" : "Specifikujte cestu ke složce nebo souboru, prosím",
@@ -26,10 +26,10 @@
     "Minimum length must be at least 1" : "Minimální délka musí být alespoň 1",
     "Label can't be empty" : "Štítek nemůže být prázdný",
     "Error occurred while saving settings" : "Při ukládání nastavení nastala chyba",
-    "Custom public link" : "Vlastní veřejný odkaz",
+    "Custom public link" : "Vlastní veřejný odkaz (token)",
     "Enter custom token" : "Zadejte vlastní token",
     "Add" : "Přidat",
-    "Submit": "Uložit",
+    "Invalid token" : "Neplatný token",
     "Custom public link created" : "Vlastní veřejný odkaz úspěšně vytvořen",
     "Error occurred while creating public link" : "Při vytváření vlastního odkazu nastala chyba",
     "Custom public link renamed" : "Vlastní veřejný odkaz úspěšně přejmenován",
