--- a/l10n/cs.json
+++ b/l10n/cs.json
@@ -6,11 +6,13 @@
     "Wrong path, file/folder doesn't exist" : "Neplatná cesta, soubor/složka neexistuje",
     "Could not create share" : "Nepodařilo se vytvořit sdílení",
     "Share not found" : "Sdílení nenalezeno",
+    "Insufficient permission" : "Nemáte dostatečná práva",
+    "Unable to check permissions" : "Nepodařilo se ověřit práva na sdílení",
     "Token is not unique" : "Token již existuje",
     "Token is not long enough" : "Token je příliš krátký",
     "Token contains invalid characters" : "Token obsahuje neplatné znaky",
-    "App adding the ability to specify share tokens" : "Aplikace umožňující uživatelům specifikovat vlastní sdílející tokeny",
-    "App that allows users to specify share tokens" : "Aplikace umožňující uživatelům specifikovat vlastní token veřejného odkazu",
+    "App adding the ability to specify share tokens" : "Aplikace umožňující uživatelům specifikovat vlastní sdílejicí tokeny",
+    "Nextcloud app that adds the ability to specify share tokens when creating new public links and change tokens of existing links.\n\n## Features\n\nSharing sidebar is expanded by new section (Custom public link) that allows you to create public links with custom share tokens.\nYou can also customize share tokens of existing public links.\n\n## Settings\n\nBy going to **Settings > Administration > Configurable Share Links** admins can set default labels for custom links and minimal token length.\nDefault label can be: none, same as token or custom (the same custom label for all custom links)." : "Nextcloud aplikace umožňující uživatelům specifikovat vlastní token při tvorběnového veřejného odkazu a změnit token u existujících odkazů.\n\n## Vlastnosti\n\nPostranní panel Sdílení je rozšířen o novou sekci (Vlastní veřejný odkaz), která umožňujevytvářet veřejné odkazy s vlastními sdílejicími tokeny.\nTaké máte možnost upravovat sdílejicí tokeny existujících veřejných odkazů.\n\n## Nastavení\n\nV sekci **Nastavení > Správa > Konfigurovatelné sdílené odkazy** mohou administrátořidefinovat výchozí štítky vlastních odkazů a minimální délku tokenu.\nVýchozí štítek může být: žádný, stejný jako token nebo vlastní (stejný štítek pro všechny vlastní odkazy).",
     "Default share label" : "Výchozí štítek odkazu",
     "Configure whether a default label should be set to custom links and what that label should be" : "Nastavte, zda by měly mít vlastní odkazy výchozí štítek a jaký by měl být",
     "Default label" : "Výchozí štítek",
@@ -28,7 +30,8 @@
     "Error occurred while saving settings" : "Při ukládání nastavení nastala chyba",
     "Custom public link" : "Vlastní veřejný odkaz (token)",
     "Enter custom token" : "Zadejte vlastní token",
-    "Add" : "Přidat",
+    "Link copied" : "Odkaz zkopírován",
+    "Create link" : "Vytvořit odkaz",
     "Invalid token" : "Neplatný token",
     "Custom public link created" : "Vlastní veřejný odkaz úspěšně vytvořen",
     "Error occurred while creating public link" : "Při vytváření vlastního odkazu nastala chyba",
